spacing fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -172,7 +172,7 @@ body {
 /* landing page */
 .about-image {
   width: 60%;
-  margin: 5rem auto;
+  margin: 12rem auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -339,6 +339,7 @@ footer h4 {
     font-size: 1rem;
     width: 100%;
   }
+  
   /* Work */
 
   #work img {
@@ -346,6 +347,7 @@ footer h4 {
     /* object-fit: cover; */
   }
   .about-image {
+    margin: 8rem auto;
     width: 90%;
   }
   /* UI/UX */
@@ -412,6 +414,9 @@ footer h4 {
   .about-container p {
     font-size: 0.8rem;
     width: 100%;
+  }
+  .about-image {
+    margin: 3rem auto;
   }
 
   /* footer */
